--- a/result/2022-07-20.md
+++ b/result/2022-07-20.md
@@ -45,3 +45,4 @@
 45. [婴儿被扔垃圾桶啼哭不止](https://s.weibo.com//weibo?q=%23%E5%A9%B4%E5%84%BF%E8%A2%AB%E6%89%94%E5%9E%83%E5%9C%BE%E6%A1%B6%E5%95%BC%E5%93%AD%E4%B8%8D%E6%AD%A2%23&Refer=top) 46049
 46. [国台办回应佩洛西将窜访台湾](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%9B%9E%E5%BA%94%E4%BD%A9%E6%B4%9B%E8%A5%BF%E5%B0%86%E7%AA%9C%E8%AE%BF%E5%8F%B0%E6%B9%BE%23&Refer=top) 45175
 47. [骗子在群里被十几个警察包围](https://s.weibo.com//weibo?q=%23%E9%AA%97%E5%AD%90%E5%9C%A8%E7%BE%A4%E9%87%8C%E8%A2%AB%E5%8D%81%E5%87%A0%E4%B8%AA%E8%AD%A6%E5%AF%9F%E5%8C%85%E5%9B%B4%23&Refer=top) 45171
+48. [龚俊数字人脱口秀好有梗](https://s.weibo.com//weibo?q=%23%E9%BE%9A%E4%BF%8A%E6%95%B0%E5%AD%97%E4%BA%BA%E8%84%B1%E5%8F%A3%E7%A7%80%E5%A5%BD%E6%9C%89%E6%A2%97%23&Refer=top) 12493
